# SENTRX-Q

./: .env.example  .gitignore  LICENSE  README.md  REDDIT_POST.md  config.py  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
bot/: __init__.py  actions.py  ai_triage.py  heuristics.py  reddit_client.py
config/: default.yml
dashboard/: __init__.py  app.py
dashboard/templates/: base.html  index.html  stats.html
database/: __init__.py  models.py
scripts/: fetch_reddit_credentials.py
tests/: __init__.py  test_actions.py  test_ai_triage.py  test_dashboard.py  test_database.py  test_heuristics.py  test_reddit_client.py
